# Serials-TgBot

./: .gitignore  docker-compose.yaml  pyproject.toml
docker/: Dockerfile
src/: config.py  run.py
src/bot/handle/: user.py
src/bot/keyboards/: inline.py  reply.py
src/bot/messages/: user_message.py
src/bot/service/: tvmaze_service.py
src/cache/: orm.py
src/db/: engine.py
