[tool.poetry]
name = "sireals"
version = "0.1.0"
description = ""
authors = ["Oleg Sungurovsky <safasgasc.asfg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
aiogram = "^3.13.1"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
